crates/coxswain-e2e/fixtures/gateway_api/host_rewrite.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: coxswain-test
spec:
  gatewayClassName: coxswain
  listeners:
    - name: http
      port: ${GATEWAY_HTTP_PORT}
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: host-rewrite
spec:
  parentRefs:
    - name: coxswain-test
  hostnames:
    - "rewrite.${TESTNS}.local"
  rules:
    - filters:
        - type: URLRewrite
          urlRewrite:
            hostname: "new-host.${TESTNS}.local"
      backendRefs:
        - name: echo-a
          port: 3000

    # Probe rule
    - matches:
        - path:
            type: Exact
            value: /probe
      backendRefs:
        - name: echo-a
          port: 3000
